# k8s-study

./: .gitignore  README.md
01 Documents/: 00_Prompt.md  02_요구사항.md
01 docs/: 01_개요.md
01_Documents/: 00_Prompt.md  01_개요.md  02_요구사항.md  03_Deployments.md  04_Health_Probe.md  05_Lifecycle.md  06_Automated_Placement.md  07_Batch_Job.md  08_Periodic_Job.md  09_Daemon_Service.md  10_Singleton_Service.md
02 Command/: Cheat_sheet.md  Own.md
02_Command/: k3d_so_be_it.md  so_be_it.md
10_Cookbook/my-boilerplate/: README.md
10_Cookbook/my-boilerplate/configs/: namespace.yaml  springboot-app-secret.yaml
10_Cookbook/my-boilerplate/cronjob/: cronjob-2.yaml  cronjob.yaml  locust-cronjob.yaml
10_Cookbook/my-boilerplate/deployments/cron/: cronjob-2.yaml  cronjob.yaml  locust-cronjob.yaml
10_Cookbook/my-boilerplate/deployments/fastapi-app/: deployment.yaml  service.yaml
10_Cookbook/my-boilerplate/manifests/: namespace.yaml
10_Cookbook/my-boilerplate/monitoring/: README.md  grafana-values.yaml  prometheus-values.yaml
10_Cookbook/my-boilerplate/values/: ArgoCD.md  README.md
10_Cookbook/mysql-wordpress/: namespace.yaml  volume.yaml
10_Cookbook/nginx/: config-map.yaml  configmap.yaml  nginx-deployment.yaml  service.yaml
10_Cookbook/quiz/02/: manifest.yaml
20_Application/fastapi-app/: Dockerfile  README.md  main.py  pyproject.toml
20_Application/fastapi-app/src/: config.py  dto.py  redis_client.py
20_Application/locust-app/: Dockerfile  README.md  main.py  pyproject.toml
20_Application/springboot-app/: Dockerfile  README.md  build.gradle.kts  request.http
(+19 files in other folders)
