[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["Raynor <jonggu.woo@fitpet.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"
fastapi = {extras = ["standard"], version = "^0.115.11"}
redis = "^5.2.1"
fastapi-healthchecks = "^1.1.0"
aiohttp = "^3.11.14"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
